# bulk-rename

./: Cargo.toml
src/: bulk_rename.rs  editor_rename.rs  errors.rs  exit_codes.rs  filesystem.rs  main.rs  opt.rs  regex.rs  regex_helper.rs  replace_rename.rs
