[package]
name = "bulk-rename"
version = "0.1.0"
authors = ["Brian Shu <littlebubu.shu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3.1"
structopt = "0.3.16"
anyhow = "1.0.32"
walkdir = "2.3.1"
ignore = "0.4.16"
tempfile = "3.1.0"
regex = "1.3.9"
jemallocator = "0.3.2"
